--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,8 +48,8 @@ jobs:
           sudo mkdir -p /run/nanocl
           sudo chown $USER:nanocl -R /run/nanocl
           mkdir -p /home/$USER/.nanocl_dev/state/vms/images
-          mkdir -p /home/$USER/.nanocl_dev/state/proxy/nginx/sites-enabled
-          mkdir -p /home/$USER/.nanocl_dev/state/proxy/nginx/sites-available
+          mkdir -p /home/$USER/.nanocl_dev/state/proxy/sites-enabled
+          mkdir -p /home/$USER/.nanocl_dev/state/proxy/sites-available
           sudo chown $USER:nanocl -R /home/$USER/.nanocl_dev
           sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
@@ -66,12 +66,13 @@ jobs:
           sudo chown $USER:nanocl -R /home/$USER/.nanocl_dev
           GID=$(id -g)
           echo $GID
-          cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --gid $GID --state-dir /home/$USER/.nanocl_dev/state &
+          cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir /home/$USER/.nanocl_dev/state &
           sleep 10
           cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /home/$USER/.nanocl_dev/state/proxy &
           sleep 10
           docker ps -a
           sleep 40
+          sudo chown -R $USER:nanocl /run/nanocl
           ls -la /home/$USER/.nanocl_dev/state
           ls -la /home/$USER/.nanocl_dev/state/proxy
           ls -la /run/nanocl
