--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,7 +64,7 @@ jobs:
           sleep 10
           sudo chown $USER:nanocl -R /run/nanocl
           sudo chown $USER:nanocl -R /home/$USER/.nanocl_dev
-          sudo chmod 777 -R /home/$USER/state/proxy
+          sudo chmod 777 -R /home/$USER/.nanocl_dev/state/proxy
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir /home/$USER/.nanocl_dev/state &
           cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /home/$USER/.nanocl_dev/state/proxy &
           sleep 10
