--- a/examples/deploy_secrets.yml
+++ b/examples/deploy_secrets.yml
@@ -3,8 +3,8 @@ ApiVersion: v0.12
 Namespace: global
 
 Secrets:
-- Key: deploy-secret
-  Kind: Env
+- Name: deploy-secret
+  Kind: nanocl.io/env
   Data:
   - TOTO=TATA
   - GG=WP
