--- a/examples/secret_env.yml
+++ b/examples/secret_env.yml
@@ -1,8 +1,8 @@
 ApiVersion: v0.12
 
 Secrets:
-- Key: deploy-secret
-  Kind: Env
+- Name: deploy-secret
+  Kind: nanocl.io/env
   Data:
   - TOTO=TATA
   - GG=WP
