--- a/examples/args_advanced.yml
+++ b/examples/args_advanced.yml
@@ -25,7 +25,7 @@ Cargoes:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: ${{ Args.domain }}
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
