--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -10,7 +10,7 @@ Args:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: ${{ Args.domain }}
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
