--- a/examples/deploy_secrets.yml
+++ b/examples/deploy_secrets.yml
@@ -13,7 +13,7 @@ Secrets:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: deploy-secret.com
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
