--- a/bin/ncproxy/tests/resource_tcp.yml
+++ b/bin/ncproxy/tests/resource_tcp.yml
@@ -2,7 +2,7 @@ ApiVersion: v0.12
 
 Resources:
 - Name: proxy-get-started
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
