--- a/examples/deploy_ssl.yml
+++ b/examples/deploy_ssl.yml
@@ -60,7 +60,7 @@ Secrets:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: secret-tls.com
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Metadata:
     Cert: certbot
