--- a/examples/dns_example.yml
+++ b/examples/dns_example.yml
@@ -2,7 +2,7 @@ ApiVersion: v0.12
 
 Resources:
 - Name: vpn-dns
-  Kind: DnsRule
+  Kind: ncdns.io/rule
   Version: v0.4
   Data:
     Network: global.nsp
