--- a/examples/double_port_error.yml
+++ b/examples/double_port_error.yml
@@ -6,7 +6,7 @@ Namespace: global
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: deploy-example.com
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
