--- a/examples/resource_ssl_example.yml
+++ b/examples/resource_ssl_example.yml
@@ -4,7 +4,7 @@ ApiVersion: v0.12
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: resource-example
-  Kind: ProxyRule
+  Kind: ncproxy.io/rule
   Version: v0.9
   Data:
     Rules:
