--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -15,8 +15,7 @@ Secrets:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
 - Name: deploy-example.com
-  Kind: ncproxy.io/rule
-  Version: v0.9
+  Kind: ncproxy.io/rule/v0.9
   Metadata:
     CertManager: certbot
     Selector:
