--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,9 +56,9 @@ jobs:
           sudo chown $USER:nanocl -R $HOME/.nanocl_dev
           sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
-          docker pull ghcr.io/nxthat/metrsd:0.3.2
-          docker pull ghcr.io/nxthat/nanocl-get-started:latest
-          docker pull ghcr.io/nxthat/nanocl-qemu:8.0.2.0
+          docker pull ghcr.io/next-hat/metrsd:0.3.2
+          docker pull ghcr.io/next-hat/nanocl-get-started:latest
+          docker pull ghcr.io/next-hat/nanocl-qemu:8.0.2.0
           docker buildx build --load --cache-from type=local,src=~/buildx-cache --cache-to type=local,dest=~/buildx-cache -t ndns:dev -f ./bin/ndns/Dockerfile .
           docker buildx build --load --cache-from type=local,src=~/buildx-cache --cache-to type=local,dest=~/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
           cargo build --no-default-features --features test --bin ncproxy
