--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -7,7 +7,7 @@ description = "The Self-Sufficient Hybrid-Cloud Orchestrator CLI"
 readme = "../../README.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://next-hat.com/nanocl"
-repository = "https://github.com/nxthat/nanocl"
+repository = "https://github.com/next-hat/nanocl"
 
 [[bin]]
 name = "nanocl"
