--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -7,7 +7,7 @@ description = "The Self-Sufficient Hybrid-Cloud Orchestrator Daemon"
 readme = "../../readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://next-hat.com/nanocl"
-repository = "https://github.com/nxthat/nanocld"
+repository = "https://github.com/next-hat/nanocld"
 
 [[bin]]
 name = "nanocld"
