--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -8,7 +8,7 @@ description = "Official nanocl controller daemon proxy"
 readme = "readme.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://next-hat.com/nanocl"
-repository = "https://github.com/nxthat/nanocld"
+repository = "https://github.com/next-hat/nanocld"
 
 [[bin]]
 name = "ncproxy"
