--- a/bin/ndns/Dockerfile
+++ b/bin/ndns/Dockerfile
@@ -11,7 +11,7 @@ EXPOSE 53/tcp 53/udp
 COPY ./bin/ndns/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
+LABEL org.opencontainers.image.source https://github.com/next-hat/nanocl
 LABEL org.opencontainers.image.description Nanocl Dns
 
 COPY ./bin/ndns/dnsmasq.conf /dnsmasq.conf
