--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: nexthatbot
+          username: ${{ secrets.BOT_USERNAME }}
           password: ${{ secrets.BOT_TOKEN }}
       - name: Publish Nightly
         if: env.CHANNEL == 'nightly'
