--- a/.github/workflows/publish_nightly_image.yml
+++ b/.github/workflows/publish_nightly_image.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: nexthatbot
+          username: ${{ secrets.BOT_USERNAME }}
           password: ${{ secrets.BOT_TOKEN }}
       # Extract branch info
       - name: Set info
