--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/main.rs"
 [features]
 default = []
 dev = ["nanocl_utils/dev"]
+release = ["openssl/vendored"]
 test = []
 
 [build-dependencies]
@@ -41,7 +42,7 @@ serde_yaml = "0.9"
 tabled = "0.14.0"
 indicatif = "0.17.7"
 serde_json = "1.0.108"
-ntex = { version = "0.7.16", features = ["tokio"] }
+ntex = { version = "0.7.16", features = ["tokio", "openssl"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4.11", features = ["derive", "cargo"] }
 tokio = { version = "1.34.0", features = ["fs"] }
@@ -69,3 +70,4 @@ toml = "0.8.8"
 ring = "0.17.5"
 nix = { version = "0.27.1", features = ["user"] }
 dotenvy = "0.15.7"
+openssl = "0.10"
