bugfix: openssl build (#757)
* bugfix: openssl build

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -33,16 +33,16 @@ args = [
 [tasks.tests-daemon]
 command = "cargo"
 args = [
-  "nextest",
-  "run",
+  "test",
   "--no-default-features",
   "--features",
   "test",
   "${@}",
-  "-j",
-  "1",
   "--bin",
   "nanocld",
+  "--",
+  "--test-threads",
+  "1",
 ]
 
 # Test nanocld_client
@@ -54,59 +54,52 @@ args = ["nextest", "run", "-p", "nanocld_client"]
 [tasks.tests-cli]
 command = "cargo"
 args = [
-  "nextest",
-  "run",
+  "test",
   "--no-default-features",
   "--features",
   "test",
   "${@}",
-  "-j",
-  "1",
   "--bin",
   "nanocl",
+  "--",
+  "--test-threads",
+  "1",
 ]
 
 # Test ncproxy
 [tasks.tests-ncproxy]
 command = "cargo"
 args = [
-  "nextest",
-  "run",
+  "test",
   "--no-default-features",
   "--features",
   "test",
   "${@}",
-  "-j",
-  "1",
   "--bin",
   "ncproxy",
+  "--",
+  "--test-threads",
+  "1",
 ]
 
 # Test all
 [tasks.tests]
 command = "cargo"
 args = [
-  "nextest",
-  "run",
+  "test",
   "--no-default-features",
   "--features",
   "test",
   "${@}",
-  "-j",
+  "--",
+  "--test-threads",
   "1",
 ]
 
 # Test all with debug output
 [tasks.tests-debug]
 command = "cargo"
-args = [
-  "nextest",
-  "run",
-  "--no-default-features",
-  "--features",
-  "test",
-  "--nocapture",
-]
+args = ["test", "--no-default-features", "--features", "test", "--nocapture"]
 
 [tasks.dev]
 command = "docker"
@@ -115,29 +108,21 @@ args = ["compose", "up"]
 # Test coverage
 [tasks.cov]
 command = "cargo"
-args = [
-  "llvm-cov",
-  "nextest",
-  "--no-default-features",
-  "--features",
-  "test",
-  "-j",
-  "1",
-]
+args = ["llvm-cov", "--no-default-features", "--features", "test", "-j", "1"]
 
 # Test all with coverage for codecov
 [tasks.covgen]
 command = "cargo"
 args = [
   "llvm-cov",
-  "nextest",
   "--no-default-features",
   "--features",
   "test",
   "--output-path",
   "./lcov.info",
   "--lcov",
-  "-j",
+  "--",
+  "--test-threads",
   "1",
 ]
 
