--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,14 +36,10 @@ jobs:
           key: ${{ hashFiles('./Cargo.lock') }}
       # Install cargo make
       - uses: davidB/rust-cargo-make@v1
-      # Install llvm-cov
-      - uses: taiki-e/install-action@cargo-llvm-cov
-      # Install nextest
-      - uses: taiki-e/install-action@nextest
       # Prepare CI with images containers and permissions
       - name: Prepare CI
         run: |
-          sudo apt install -y qemu-kvm qemu-utils
+          sudo apt install -y qemu-kvm qemu-utils pkg-config gcc musl-dev libpq-dev libssl-dev musl-tools libc-dev g++ make
           wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
           mv ubuntu-22.04-minimal-cloudimg-amd64.img tests/ubuntu-22.04-minimal-cloudimg-amd64.img
           sudo groupadd nanocl
